app/assets/stylesheets/saint_rock.css.scss
body {
  margin: 0;
}

#page {
  font-family: Tahoma;
  font-size: 13px;
  line-height: 24px;
}

#home-page {
  line-height: 16px;
  font-family: Verdana;
  color: #333;

  .image-left {
    float: left;
    width: 130px;
    font-family: Tahoma;
  }

  .blue-header {
    font-weight: 700;
    color: #009999;
  }
}

#side_body_content {
  float: left;

  #sponsor_a_child, #photo_gallery, #make_a_donation {
    img {
      width: 411px;
      height: 39px;
      display: block;
    }
  }
}

.header-overlap-image1 {
  background: url('/assets/overlap1.jpg') no-repeat top left;
  width: 482px;
  height: 253px;
  left: -21px;
  top: -92px;
  position: relative;
}

.header-overlap-image2 {
  background: url('/assets/overlap2.jpg') no-repeat top left;
  width: 482px;
  height: 253px;
  left: -21px;
  top: -92px;
  position: relative;
}

#body_content {
  float: left;
  width: 593px;
}

#menu {

  ul {
    list-style: none;
    padding-left: 20px;
  }
  a {
    color: rgb(150, 160, 180);
    text-decoration: none;
    text-transform:uppercase;
  }
 
  .image-align-left {
    margin-right: 40px;
  }
  #side_body {
    position: absolute;
    top: 0;
    left: 10px;
    width: 250px;
    p {
      color: #777;
      font-size: 14px;
    }
  }

}

#footer {
  #footer-left {
    background: url('/assets/layout_29.gif') top left;
    width: 641px;
    height: 111px;
    float: left;
  }
  #footer-right {
    background: url('/assets/layout_32.gif') top left;
    width: 363px;
    height: 111px;
    float: left;
  }
  #footer-links {
    position: relative;
    left: 24px;
    top:  44px;
    font-family: Tahoma;
    font-size: 11px;
    color: #C0C0C0;
  }

  a {
    text-decoration:none;
    color: #C0C0C0;
  }
}

#rotate-frame {
  width: 593px;
  padding: 0 0 20px 10px;
}


#wrapper {
  float: left;
  width: 536px;
  height: 242px;
  margin: 0 auto;
  overflow: hidden;
  padding: 0;
  position: relative;
}
 
#rotate-arrow-left {
  float: left;
  width: 18px;
  margin-top: 86px;
}

#rotate-arrow-right {
  float: left;
  width: 18px;
  margin-top: 86px;
}

.gallery-image {
  float: left;
  width: 244px;
  height: 218px;
  font-size: 11pt;
  margin: 5px;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border: 7px solid #DDD;
  background-color: #DDD;
}

